Removed all mentions of saidit

--- a/r2/r2/templates/prefapps.html
+++ b/r2/r2/templates/prefapps.html
@@ -328,7 +328,7 @@ ${utils.radio_type('app_type', "script", _("script"),
    onsubmit="${"return post_form(this, 'updateapp', function(x) {return '%s'})" % jssafe(_("creating..."))}">
     <h1>${_("create application")}</h1>
     ## TODO: populate content for original url /wiki/api
-    <p>${_md("Please [read the API usage guidelines](https://github.com/reddit-archive/reddit/wiki/API) before creating your application. After creating, you will be required to register for production API use. Please message /u/magnora7 to let saidit know about your app if it reaches the production and release phase.")}
+    <p>${_md("Please [read the API usage guidelines](https://github.com/reddit-archive/reddit/wiki/API) before creating your application. After creating, you will be required to register for production API use. Please message /u/wezerl to let us know about your app if it reaches the production and release phase.")}
     <input type="hidden" name="uh" value="${c.modhash}" />
     <table class="content preftable">
       <tr>
