--- a/r2/r2/templates/profilebar.html
+++ b/r2/r2/templates/profilebar.html
@@ -33,7 +33,7 @@
     %if thing.user.employee:
       <span class="user-distinction">
         [
-        <span class="admin" title="saidit admin">A</span>
+        <span class="admin" title="Admin">A</span>
         ]
       </span>
     %endif
@@ -124,7 +124,7 @@
     %endif
 
     <span class="age">
-      ${_("saiditter for")}&#32;${thing_timestamp(thing.user)}
+      ${_("User for")}&#32;${thing_timestamp(thing.user)}
     </span>
   </div>
 
@@ -155,7 +155,7 @@
             <option value="engaging in vote manipulation">Vote Manipulation</option>
             <option value="posting pornography">Porn</option>
             <option value="sexualizing minors">Sexualizing Minors</option>
-            <option value="breaking the saidit rules">Other</option>
+            <option value="breaking the Site-wide rules">Other</option>
           </select>
         </div>
         <div>
