--- a/r2/r2/templates/createsubreddit.html
+++ b/r2/r2/templates/createsubreddit.html
@@ -156,7 +156,7 @@ There is a 2 week delay to create a sub after creating an account. Also there is
       <% is_employees_only = thing.site and thing.site.type == 'employees_only' %>
       %if c.user.employee:
         ${utils.radio_type('type', "employees_only", _("employees only"),
-                           _("only saidit employees can view; the employee list is pulled from live config"),
+                           _("only employees can view; the employee list is pulled from live config"),
                            is_employees_only)}
       %endif
 
@@ -436,7 +436,7 @@ There is a 2 week delay to create a sub after creating an account. Also there is
             "helpon", "helpoff")}
       </div>
       <div class="infobar markhelp md" style="display: none">
-        ${_("Own a domain?  Enter it here and then go to your DNS provider and add a CNAME record aliasing your domain to it. You will be able to access your saidit through your domain.")}
+        ${_("Own a domain?  Enter it here and then go to your DNS provider and add a CNAME record aliasing your domain to it. You will be able to access your Instance through your domain.")}
       </div>
     </div>
   </%utils:line_field>
