--- a/r2/r2/templates/newlink.html
+++ b/r2/r2/templates/newlink.html
@@ -35,7 +35,7 @@
   if thing.default_sr:
     sr = format_html("&#32;%s", unsafe(_a_buffered(thing.default_sr.name, href=thing.default_sr.path)))
   else:
-    sr = _("SaidIt")
+    sr = _("Headquarter")
 %>
 
 <h1>${_wsf("submit to %(sr)s", sr=sr)}</h1>
@@ -144,10 +144,10 @@ ${thing.captcha}
 </div>
 
 <div class="roundfield info-notice">
-  ${text_with_links(_("please be mindful of SaidIt's %(content_policy)s"),
+  ${text_with_links(_("please be mindful of the %(content_policy)s"),
       content_policy=dict(
         link_text=_("content policy"),
-        path="/r/SaidIt/comments/j1/the_saiditnet_terms_and_content_policy/",
+        path="/s/Headquarter/comments/46/terms_and_content_policy/",
         target="_blank"),
       good_reddiquette=dict(
         link_text=_("good reddiquette"),
