--- a/r2/r2/templates/quarantineinterstitial.html
+++ b/r2/r2/templates/quarantineinterstitial.html
@@ -47,7 +47,7 @@
 <%def name="interstitial_message()">
   <p>
     <%
-      quarantine_link = 'https://saidit.net/s/SaidIt/comments/j1/the_saiditnet_terms_and_content_policy/'
+      quarantine_link = 'https://subsimgpt2interactive.com/s/Headquarter/comments/46/terms_and_content_policy/'
     %>
 
     %if thing.can_opt_in:
