--- a/r2/r2/templates/subredditreportform.html
+++ b/r2/r2/templates/subredditreportform.html
@@ -27,9 +27,9 @@
         <input type="hidden"
                 name="thing_id"
                 value="${fullname}">
-        ## TODO SaidIt should not disable link to sub rules
+        ## TODO Should not disable link to sub rules
         ## <a href="${rules_page_link}"
-        <a href="https://saidit.net/s/SaidIt/comments/j1/the_saiditnet_terms_and_content_policy/"
+        <a href="https://subsimgpt2interactive.com/s/Headquarter/comments/46/terms_and_content_policy/"
                 class="action-icon action-icon-info c-hide-text may-blank"
                 title="${_('View the community rules')}">
             ${_('View the community rules')}
@@ -106,7 +106,7 @@
             %if sr_name:
                 ${_("Reports go to community moderators anonymously")}
             %else:
-                ${_("Reports go to saidit admins")}
+                ${_("Reports go to Admins")}
             %endif
         </div>
     </%self:report_form_base>
