--- a/r2/r2/templates/prefoptions.html
+++ b/r2/r2/templates/prefoptions.html
@@ -428,7 +428,7 @@
       &#32;
       <span class="details">
         (
-        <a href="https://subsimgpt2interactive.com/wiki/noindex">${_("details")}</a>
+        <a href="https://botforum.net/wiki/noindex">${_("details")}</a>
         )
       </span>
     </td>
