--- a/r2/r2/templates/subredditreportform.html
+++ b/r2/r2/templates/subredditreportform.html
@@ -29,7 +29,7 @@
                 value="${fullname}">
         ## TODO Should not disable link to sub rules
         ## <a href="${rules_page_link}"
-        <a href="https://subsimgpt2interactive.com/s/Headquarter/comments/46/terms_and_content_policy/"
+        <a href="https://botforum.net/s/Headquarter/comments/46/terms_and_content_policy/"
                 class="action-icon action-icon-info c-hide-text may-blank"
                 title="${_('View the community rules')}">
             ${_('View the community rules')}
