--- a/r2/r2/templates/profilebar.html
+++ b/r2/r2/templates/profilebar.html
@@ -128,33 +128,22 @@
     </span>
   </div>
 
-  %if thing.viewing_self:
-    <br>
-    <a href="/account-activity">Account IP activity</a>
-  %endif
-
-  %if c.user_is_admin:
+  %if c.user_is_admin and not thing.user.name in g.admins:
     <br>
     <a class="ban-tools-expander" id="ban-tools-expander" href="javascript:void(0);" onclick="expandUserBanTools();">+ Show ban tools</a>
     <div class="admin-ban-user" id="ban-tools" style="display: none;">
       <li>
-        <input class="nomargin" type="checkbox" name="ban" id="ban" ${'checked="checked"' if thing.user._spam else ''} onclick="$.request(&quot;admin/ban_user&quot;, {uh: &quot;${c.modhash}&quot;, victim: &quot;${thing.user.name}&quot;, reverse: !event.target.checked});">
+        <input class="nomargin" type="checkbox" name="ban" id="ban" ${'checked="checked"' if thing.user._spam else ''} onclick="$.request(&quot;admin/ban_user&quot;, {uh: &quot;${c.modhash}&quot;, recipient: &quot;${thing.user.name}&quot;, reverse: !event.target.checked});">
         <label for="ban">user is shadowbanned</label>
       </li>
-      %if g.admin_enable_password_locking or c.user_is_superadmin:
-        <li>
-          <input class="nomargin" type="checkbox" name="lock" id="lock" ${'checked="checked"' if thing.user._banned else ''} onclick="$.request(&quot;admin/lock_user&quot;, {uh: &quot;${c.modhash}&quot;, victim: &quot;${thing.user.name}&quot;, reverse: !event.target.checked});">
-          <label for="locked">user is password locked</label>
-        </li>
-      %endif
       <li>
-        <input class="nomargin" type="checkbox" name="spiderban" id="spiderban" ${'checked="checked"' if thing.user.spiderbanned else ''} onclick="$.request(&quot;admin/spiderban_user&quot;, {uh: &quot;${c.modhash}&quot;, victim: &quot;${thing.user.name}&quot;, reverse: !event.target.checked});">
-        <label for="spiderban">bans spread to alts through cookies</label>
+        <input class="nomargin" type="checkbox" name="lock" id="lock" ${'checked="checked"' if thing.user._banned == 1 else ''} onclick="$.request(&quot;admin/lock_user&quot;, {uh: &quot;${c.modhash}&quot;, recipient: &quot;${thing.user.name}&quot;, reverse: !event.target.checked});">
+        <label for="locked">user is password locked</label>
       </li>
       <br>
       <form action="/api/admin/suspend_user" method="post" class="pretty-form medium-text" onsubmit="return post_form(this, 'admin/suspend_user')" id="adminsuspend-form">
         <h1>Issue suspension</h1>
-        <input type="hidden" name="victim" value="${thing.user.name}">
+        <input type="hidden" name="recipient" value="${thing.user.name}">
         <input type="hidden" name="uh" value="${c.modhash}">
         <div>
           <label for="ban_reason">reason</label>
@@ -188,7 +177,7 @@
                    title=_('lift'), 
                    executed=_('lifted'),
                    hidden_data = dict(uh = c.modhash,
-                                      victim = thing.user.name),
+                                      recipient = thing.user.name),
         )}
       %endif
     </div>
@@ -210,10 +199,6 @@
           banTools.style = "display: none;";
       }
     </script>
-    <br>
-    %if g.admin_enable_ip_history or c.user_is_superadmin:
-      <a href=/admin/iphistory?username=${thing.user.name}>IP History</a>
-    %endif
   %endif
 
   <div class="clear"> </div>
